--- a/system_facts_template.html.j2
+++ b/system_facts_template.html.j2
@@ -107,23 +107,22 @@
       </table>
     </div>
 
-  <div class="section">
+    <div class="section">
   <h2>Top Processes</h2>
   <table>
     <tr>
       <th>Host</th>
       <th>Process Name</th>
-      <th>CPU Usage</th>
-      <th>Memory Usage</th>
+      <th>CPU Usage (%)</th>
+      <th>Memory Usage (%)</th>
     </tr>
     {% for host in ansible_play_hosts %}
-    {% set sorted_processes = hostvars[host]['ansible_facts']['ansible_process_facts']['sorted_processes'] %}
-    {% for process in sorted_processes[:5] %}
+    {% for process in hostvars[host]['top_cpu_processes'] %}
     <tr>
       <td>{{ hostvars[host].ansible_nodename }}</td>
-      <td>{{ process.name }}</td>
-      <td>{{ process.cpu | round(2) }}%</td>
-      <td>{{ (process.mem_resident / (1024 * 1024)) | round(2) }} MB</td>
+      <td>{{ process.split()[0] }}</td>
+      <td>{{ process.split()[1] }}</td>
+      <td>{{ process.split()[2] }}</td>
     </tr>
     {% endfor %}
     {% endfor %}
