--- a/system_facts_template.html.j2
+++ b/system_facts_template.html.j2
@@ -57,7 +57,7 @@
         </tr>
         {% for host in ansible_play_hosts %}
         <tr>
-          <td>{{ inventory_hostname }}</td>
+          <td>{{ hostvars[host].ansible_nodename }}</td>
           <td>{{ hostvars[host].ansible_distribution }} {{ hostvars[host].ansible_distribution_version }}</td>
           <td>{{ hostvars[host].ansible_kernel }}</td>
           <td>{{ hostvars[host].ansible_processor_vcpus }}</td>
@@ -78,7 +78,7 @@
         </tr>
         {% for host in ansible_play_hosts %}
         <tr>
-          <td>{{ inventory_hostname }}</td>
+          <td>{{ hostvars[host].ansible_nodename }}</td>
           <td>{% for interface in hostvars[host].ansible_interfaces %}
             {{ interface }}: {{ hostvars[host]['ansible_' + interface]['ipv4']['address'] }}<br/>
             {% endfor %}
@@ -97,7 +97,7 @@
         </tr>
         {% for host in ansible_play_hosts %}
         <tr>
-          <td>{{ inventory_hostname }}</td>
+          <td>{{ hostvars[host].ansible_nodename }}</td>
           <td>{% for device in hostvars[host].ansible_devices %}
             {{ device }}: {{ hostvars[host].ansible_devices[device]['size'] }}<br/>
             {% endfor %}
@@ -119,7 +119,7 @@
     {% for host in ansible_play_hosts %}
     {% for process in hostvars[host]['top_cpu_processes'] %}
     <tr>
-      <td>{{ inventory_hostname }}</td>
+      <td>{{ hostvars[host].ansible_nodename }}</td>
       <td>{{ process.split()[0] }}</td>
       <td>{{ process.split()[1] }}</td>
       <td>{{ process.split()[2] }}</td>
@@ -138,7 +138,7 @@
         </tr>
         {% for host in ansible_play_hosts %}
         <tr>
-          <td>{{ inventory_hostname }}</td>
+          <td>{{ hostvars[host].ansible_nodename }}</td>
           <td>{{ hostvars[host].ansible_distribution }}</td>
         </tr>
         {% endfor %}
